--- a/style.css
+++ b/style.css
@@ -16,10 +16,10 @@
     margin: 5px;
 }
 .beige{
-    background-color:rgb(110, 110 , 98);
+    background-color:rgb(110, 110, 99);
 }
 .brown{
-    background-color: rgb(169 ,43,43);
+    background-color: #779556;
 }
 .black{
     fill : black;
